fix responsive navbar on mobile

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing:  border-box;
-    font-family: 'Poppins', sans-sertif;
+    font-family: 'Poppins', sans-serif;
 
 
 }
@@ -26,10 +26,9 @@ nav{
 }
 
 .logo{
-    position: absolute;
     top: 0;
-    left: 30px;
-    width: 80px;
+    left: 30%;
+    max-width: 80px;
     height: auto;
 }
 nav ul li{
@@ -59,7 +58,7 @@ nav ul li a{
     font-size: 14px;
     border-radius: 30px;
     border-top-right-radius: 0;
-    transition: 0,5s;
+    transition: 0.5s;
 }
 .content{
     margin-top: 10%;
@@ -92,7 +91,7 @@ nav ul li a{
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 500px;
+    width: 80vh;
     height: auto;
     filter: brightness(70%);
 }
@@ -106,6 +105,12 @@ nav ul li a{
     transform: translateY(30px);
     animation: moveup 0.5s linear forwards;
 }
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
 @keyframes moveup{
     100%{
         opacity: 1;
@@ -113,3 +118,14 @@ nav ul li a{
         
     }
 }
+ 
+@media (max-width: 768px) {
+    .content h1 {
+        font-size: 36px;
+    }
+    .features {
+        width: 100%;
+    }
+}
+
+
